[gd_scene load_steps=50 format=3 uid="uid://b1x8hceon3kv1"]

[ext_resource type="Script" path="res://scripts/new_player.gd" id="1_xq8hx"]
[ext_resource type="Texture2D" uid="uid://cre63qd6w4t1q" path="res://resources/sprites/character sprite trial.png" id="2_6cyrq"]
[ext_resource type="AudioStream" uid="uid://bchc3fxod6nr6" path="res://resources/music/667293__pekena_larva__voc_male_jump_01.wav" id="2_tpcne"]
[ext_resource type="Script" path="res://scripts/camera.gd" id="3_fw1lj"]
[ext_resource type="AudioStream" uid="uid://fw55c6vkc3vh" path="res://resources/music/107624__stintx__running02.wav" id="3_h1ddg"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_i5yjt"]
size = Vector2(84, 120)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_klwkx"]
size = Vector2(83.3287, 91.6666)

[sub_resource type="AtlasTexture" id="AtlasTexture_v4i33"]
atlas = ExtResource("2_6cyrq")
region = Rect2(1024, 640, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_2sl15"]
atlas = ExtResource("2_6cyrq")
region = Rect2(1152, 640, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_3fp1v"]
atlas = ExtResource("2_6cyrq")
region = Rect2(1280, 640, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_gmqw3"]
atlas = ExtResource("2_6cyrq")
region = Rect2(1408, 640, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_bysmp"]
atlas = ExtResource("2_6cyrq")
region = Rect2(896, 512, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_bohib"]
atlas = ExtResource("2_6cyrq")
region = Rect2(512, 256, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_gtqek"]
atlas = ExtResource("2_6cyrq")
region = Rect2(1280, 256, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_jgoyb"]
atlas = ExtResource("2_6cyrq")
region = Rect2(1408, 256, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_ctlap"]
atlas = ExtResource("2_6cyrq")
region = Rect2(896, 768, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_dy6yg"]
atlas = ExtResource("2_6cyrq")
region = Rect2(1280, 768, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_pd3ps"]
atlas = ExtResource("2_6cyrq")
region = Rect2(896, 256, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_4rgeu"]
atlas = ExtResource("2_6cyrq")
region = Rect2(1024, 256, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_jnmd1"]
atlas = ExtResource("2_6cyrq")
region = Rect2(1152, 256, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_mfa5a"]
atlas = ExtResource("2_6cyrq")
region = Rect2(768, 256, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_as077"]
atlas = ExtResource("2_6cyrq")
region = Rect2(768, 640, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_xlwle"]
atlas = ExtResource("2_6cyrq")
region = Rect2(128, 640, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_faeig"]
atlas = ExtResource("2_6cyrq")
region = Rect2(256, 640, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_bkoqi"]
atlas = ExtResource("2_6cyrq")
region = Rect2(384, 640, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_pl2jf"]
atlas = ExtResource("2_6cyrq")
region = Rect2(512, 640, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_vwb7h"]
atlas = ExtResource("2_6cyrq")
region = Rect2(640, 640, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_evdnv"]
atlas = ExtResource("2_6cyrq")
region = Rect2(896, 640, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_qpin1"]
atlas = ExtResource("2_6cyrq")
region = Rect2(768, 256, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_saiv2"]
atlas = ExtResource("2_6cyrq")
region = Rect2(640, 256, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_2q6qp"]
atlas = ExtResource("2_6cyrq")
region = Rect2(640, 384, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_v62g3"]
atlas = ExtResource("2_6cyrq")
region = Rect2(896, 768, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_noy6m"]
atlas = ExtResource("2_6cyrq")
region = Rect2(768, 768, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_k7xw3"]
atlas = ExtResource("2_6cyrq")
region = Rect2(128, 768, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_8t1x0"]
atlas = ExtResource("2_6cyrq")
region = Rect2(256, 768, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_p82ik"]
atlas = ExtResource("2_6cyrq")
region = Rect2(384, 768, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_2xrq5"]
atlas = ExtResource("2_6cyrq")
region = Rect2(512, 768, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_j4874"]
atlas = ExtResource("2_6cyrq")
region = Rect2(640, 768, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_6ii34"]
atlas = ExtResource("2_6cyrq")
region = Rect2(896, 768, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_wcoj1"]
atlas = ExtResource("2_6cyrq")
region = Rect2(0, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_r3hdh"]
atlas = ExtResource("2_6cyrq")
region = Rect2(128, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_6mb16"]
atlas = ExtResource("2_6cyrq")
region = Rect2(256, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_nre47"]
atlas = ExtResource("2_6cyrq")
region = Rect2(384, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_u0tuc"]
atlas = ExtResource("2_6cyrq")
region = Rect2(512, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_kfue5"]
atlas = ExtResource("2_6cyrq")
region = Rect2(640, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_mgmrq"]
atlas = ExtResource("2_6cyrq")
region = Rect2(256, 256, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_a8xdd"]
atlas = ExtResource("2_6cyrq")
region = Rect2(384, 256, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_hox3x"]
atlas = ExtResource("2_6cyrq")
region = Rect2(256, 256, 128, 128)

[sub_resource type="SpriteFrames" id="SpriteFrames_hhpru"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_v4i33")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_2sl15")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_3fp1v")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_gmqw3")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_bysmp")
}],
"loop": false,
"name": &"death",
"speed": 8.0
}, {
"frames": [],
"loop": true,
"name": &"default",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_bohib")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_gtqek")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_jgoyb")
}],
"loop": true,
"name": &"fall",
"speed": 8.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_ctlap")
}],
"loop": true,
"name": &"idle",
"speed": 8.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_dy6yg")
}],
"loop": true,
"name": &"jump",
"speed": 8.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_pd3ps")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_4rgeu")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_jnmd1")
}],
"loop": false,
"name": &"jump_2",
"speed": 8.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_mfa5a")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_as077")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_xlwle")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_faeig")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_bkoqi")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_pl2jf")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_vwb7h")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_mfa5a")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_as077")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_evdnv")
}],
"loop": false,
"name": &"jump_3",
"speed": 12.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_qpin1")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_saiv2")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_2q6qp")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_v62g3")
}],
"loop": false,
"name": &"land",
"speed": 6.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_noy6m")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_k7xw3")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_8t1x0")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_p82ik")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_2xrq5")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_j4874")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_noy6m")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_6ii34")
}],
"loop": false,
"name": &"roll",
"speed": 12.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_wcoj1")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_r3hdh")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_6mb16")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_nre47")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_u0tuc")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_kfue5")
}],
"loop": true,
"name": &"run",
"speed": 12.0
}, {
"frames": [],
"loop": true,
"name": &"sprint",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_mgmrq")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_a8xdd")
}],
"loop": false,
"name": &"wall_jump",
"speed": 6.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_hox3x")
}],
"loop": true,
"name": &"wall_slide",
"speed": 12.0
}]

[node name="Player" type="CharacterBody2D" node_paths=PackedStringArray("jump_sound", "land_sound", "run_sound", "wall_slide_sound")]
scale = Vector2(0.2, 0.2)
script = ExtResource("1_xq8hx")
jump_sound = NodePath("Sounds/JumpSoundPlayer")
land_sound = NodePath("Sounds/LandSoundPlayer")
run_sound = NodePath("Sounds/RunSoundPlayer")
wall_slide_sound = NodePath("Sounds/WallSlideSoundPlayer")

[node name="GeneralCollision" type="CollisionShape2D" parent="."]
position = Vector2(0, 3)
shape = SubResource("RectangleShape2D_i5yjt")

[node name="LeftWallDetector" type="RayCast2D" parent="."]
position = Vector2(0, 45)
target_position = Vector2(-60, 0)

[node name="RightWallDetector" type="RayCast2D" parent="."]
position = Vector2(0, 45)
target_position = Vector2(60, 0)

[node name="Sounds" type="Node" parent="."]

[node name="JumpSoundPlayer" type="AudioStreamPlayer" parent="Sounds"]
stream = ExtResource("2_tpcne")
bus = &"SFX"

[node name="LandSoundPlayer" type="AudioStreamPlayer" parent="Sounds"]

[node name="RunSoundPlayer" type="AudioStreamPlayer" parent="Sounds"]
stream = ExtResource("3_h1ddg")
volume_db = 24.0
bus = &"SFX"

[node name="WallSlideSoundPlayer" type="AudioStreamPlayer" parent="Sounds"]

[node name="RollSoundPlayer" type="AudioStreamPlayer" parent="Sounds"]

[node name="Timers" type="Node" parent="."]

[node name="WallJumpCooldown" type="Timer" parent="Timers"]
wait_time = 0.25
one_shot = true

[node name="FallingCountdown" type="Timer" parent="Timers"]

[node name="LandingCooldown" type="Timer" parent="Timers"]

[node name="DeathCooldown" type="Timer" parent="Timers"]
wait_time = 2.0
one_shot = true

[node name="ZoneDetector" type="Area2D" parent="."]

[node name="ZoneDetectorCollision" type="CollisionShape2D" parent="ZoneDetector"]
position = Vector2(-2.08616e-06, 10)
scale = Vector2(1.08006, 1.2)
shape = SubResource("RectangleShape2D_klwkx")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
sprite_frames = SubResource("SpriteFrames_hhpru")
animation = &"roll"
frame = 7
frame_progress = 1.0
flip_h = true

[node name="Camera" type="Camera2D" parent="."]
zoom = Vector2(2, 2)
limit_left = -50
limit_top = 0
limit_bottom = 720
limit_smoothed = true
position_smoothing_enabled = true
position_smoothing_speed = 8.0
script = ExtResource("3_fw1lj")

[connection signal="timeout" from="Timers/LandingCooldown" to="." method="_on_landing_cooldown_timeout"]
[connection signal="timeout" from="Timers/DeathCooldown" to="." method="_on_death_cooldown_timeout"]
[connection signal="area_entered" from="ZoneDetector" to="." method="_on_lethal_entered"]
[connection signal="area_entered" from="ZoneDetector" to="." method="_on_zone_detector_area_entered"]
[connection signal="area_exited" from="ZoneDetector" to="." method="_on_zone_detector_area_exited"]
